--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: java
-
-build:
-    - mvn clean install
 script:
     - mvn liberty:start
+    - nvm install 10
+    - nvm use 10
     - APIURL=http://localhost:9080/api ./utility/run-api-tests.sh
