--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ script:
     - mvn liberty:start
     - nvm install 10
     - nvm use 10
-    - APIURL=http://localhost:9080/api ./utility/run-api-tests.sh
+    - APIURL=http://localhost:9080 ./utility/run-api-tests.sh
