--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@ Thumbs.db
 target/
 /openliberty-realworld-example-app.iml
 /realworld-liberty.iml
+
+src/test/java/org/example/realworldapi/Scratches.java
